--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,7 +71,7 @@
             <section class="servicios-contenedor-arriba">
                 <section class="servicios-contenedor">
                     <article class="servicios-item">
-                        <div class="servicios-estilos-texto">
+                        <div class="servicios-estilos-texto" data-aos="fade-right" data-aos-duration="1400">
                             <h2>Diseño Arquitectónico</h2>
                             <p>El diseño arquitectónico es la fusión perfecta entre arte, ciencia y funcionalidad. En
                                 nuestro estudio, nos especializamos en crear espacios que no solo destacan por su
@@ -88,15 +89,15 @@
                                 diseño arquitectónico garantiza que cada construcción refleje creatividad, precisión y
                                 una profunda conexión con el contexto.</p>
                         </div>
-                        <img src="../img/mujer-trabajando.png" alt="mujer trabajando en una computadora">
+                        <img src="../img/mujer-trabajando.png" alt="mujer trabajando en una computadora" data-aos="flip-left" data-aos-duration="1400">
                     </article>
                 </section>
 
                 <section class="servicios-contenedor">
                     <article class="servicios-item">
-                        <img src="../img/mujer-arquitecta.jpg" alt="mujer arquitecta">
+                        <img src="../img/mujer-arquitecta.jpg" alt="mujer arquitecta" data-aos="flip-right" data-aos-duration="1400">
 
-                        <div class="servicios-texto-derecha servicios-estilos-texto">
+                        <div class="servicios-texto-derecha servicios-estilos-texto" data-aos="fade-left" data-aos-duration="1400">
                             <h2>Rehabilitación y Renovación</h2>
                             <p>En nuestro estudio, nos dedicamos a dar nueva vida a espacios y edificaciones a través de
                                 la rehabilitación y renovación. Entendemos el valor histórico y emocional que muchos
@@ -120,9 +121,9 @@
             <section class="servicios-contenedor-abajo">
                 <article class="servicios-item-abajo">
 
-                    <img src="../img/estudiando.png" alt="mujer trabajando en una computadora">
+                    <img src="../img/estudiando.png" alt="mujer trabajando en una computadora" data-aos="zoom-in-down" data-aos-duration="1400">
 
-                    <div class="servicios-estilos-texto">
+                    <div class="servicios-estilos-texto" data-aos="zoom-in-right" data-aos-duration="1400">
                         <h2>Planificación Urbana</h2>
                         <p>En nuestro estudio, abordamos cada proyecto con una visión integral, buscando soluciones que
                             mejoren la calidad de vida de las personas, optimicen el uso del espacio y respeten el
@@ -142,9 +143,9 @@
                 </article>
                 <article class="servicios-item-abajo">
 
-                    <img src="../img/grupo-trabajando.jpeg" alt="grupo de personas trabajando">
+                    <img src="../img/grupo-trabajando.jpeg" alt="grupo de personas trabajando"  data-aos="zoom-in-down" data-aos-duration="1400">
 
-                    <div class="servicios-estilos-texto">
+                    <div class="servicios-estilos-texto" data-aos="zoom-in-left" data-aos-duration="1400">
                         <h2>Gestión de Proyectos</h2>
                         <p>Nos encargamos de coordinar todos los aspectos del proyecto, asegurando que se cumplan los
                             plazos, el presupuesto y los estándares de calidad establecidos.
@@ -186,6 +187,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
