--- a/pages/departamentos.html
+++ b/pages/departamentos.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,13 +65,13 @@
     </header>
     <main class="proyectos-main">
         <h1>Proyectos</h1>
-        <section class="proyectos-buttons">
+        <section class="proyectos-buttons" data-aos="flip-down" data-aos-duration="400">
             <a href="proyectos.html" class="button-no-seleccionado ">Todos</a>
             <a href="casas.html" class="button-no-seleccionado">Casas</a>
             <a href="departamentos.html" class="active-proyecto-buttons">Departamentos</a>
             <a href="interiores.html" class="button-no-seleccionado">Diseño de interiores</a>
         </section>
-        <section class="galeria-proyectos">
+        <section class="galeria-proyectos" data-aos="fade-up" data-aos-duration="1000">
 
             <figure>
                 <img src="../img/proyecto-2.jpeg" alt="imagen proyecto">
@@ -114,6 +115,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
