--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,10 +22,10 @@
     <header class="header">
         <nav class="navbar fixed-top navbar-expand-lg py-3 back-nav-resposive">
             <a class="navbar-brand logo-nav" href="#">
-                <img src="../img/piaFinal.png" alt="logo nav" >
+                <img src="../img/piaFinal.png" alt="logo nav">
             </a>
             <div class="container-fluid contenedor-nav px-4 justify-content-end">
-                
+
                 <button class="navbar-toggler hamburguer-color" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <i class="bi bi-list fs-1"></i>
@@ -33,14 +34,16 @@
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header align-items-start justify-content-between ">
                         <a class="navbar-brand logo-nav-responsive" href="#">
-                            <img src="../img/piaFinal.png" alt="logo nav" >
+                            <img src="../img/piaFinal.png" alt="logo nav">
                         </a>
-                        <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <button type="button" class="btn-close p-0 fs-1 m-0" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-0">
                             <li class="nav-item">
-                                <a class="nav-link color-nav-link color-nav-a" aria-current="page" href="../index.html">Home</a>
+                                <a class="nav-link color-nav-link color-nav-a" aria-current="page"
+                                    href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link color-nav-link color-nav-a" href="servicios.html">Servicios</a>
@@ -59,17 +62,17 @@
                 </div>
             </div>
         </nav>
-        
+
     </header>
     <main class="proyectos-main">
         <h1>Proyectos</h1>
-        <section class="proyectos-buttons">
+        <section class="proyectos-buttons" data-aos="flip-down" data-aos-duration="400">
             <a href="proyectos.html" class="active-proyecto-buttons">Todos</a>
             <a href="casas.html" class="button-no-seleccionado">Casas</a>
             <a href="departamentos.html" class="button-no-seleccionado">Departamentos</a>
             <a href="interiores.html" class="button-no-seleccionado">Diseño de interiores</a>
         </section>
-        <section class="galeria-proyectos">
+        <section class="galeria-proyectos" data-aos="fade-up" data-aos-duration="1000">
 
             <figure>
                 <img src="../img/proyecto-1.jpg" alt="imagen proyecto">
@@ -122,6 +125,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
