--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mp Disarq es un estudio de arquitectura en Buenos Aires especializado en diseño arquitectónico, rehabilitación y renovación de espacios, planificación urbana y gestión de proyectos. Convierta sus sueños en realidad con soluciones innovadoras y sostenibles.">
+    <meta name="keywords" content="arquitectura, diseño arquitectónico, rehabilitación de espacios, renovación, planificación urbana, gestión de proyectos, Buenos Aires, estudio de arquitectura, Mp Disarq, Pilar, Argentina">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
