--- a/pages/casas.html
+++ b/pages/casas.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre nuestros proyectos de casas en Mp Disarq, donde la elegancia y la funcionalidad se unen para crear hogares únicos. Nuestro enfoque en el diseño personalizado garantiza que cada casa refleje el estilo y las necesidades de nuestros clientes.">
+    <meta name="keywords" content="casas, Mp Disarq, diseño arquitectónico, hogares personalizados, construcción moderna, espacios funcionales, arquitectura contemporánea, proyectos residenciales, diseño sostenible, creatividad en vivienda">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
