--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contacta a Mp Disarq para consultas sobre proyectos arquitectónicos y diseño personalizado. Nuestro equipo está listo para atender tus necesidades y ayudarte a crear el espacio de tus sueños.">
+    <meta name="keywords" content="contacto, Mp Disarq, arquitectura, diseño, proyectos arquitectónicos, atención al cliente, consulta, servicios arquitectónicos, formulario de contacto, diseño personalizado, Buenos Aires">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
