--- a/pages/departamentos.html
+++ b/pages/departamentos.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora nuestros proyectos de departamentos en Mp Disarq, donde la funcionalidad y el diseño se combinan para crear espacios modernos y acogedores. Cada departamento está diseñado para maximizar la comodidad y el estilo, adaptándose a las necesidades de nuestros clientes.">
+    <meta name="keywords" content="departamentos, Mp Disarq, diseño moderno, espacios funcionales, decoración contemporánea, proyectos de arquitectura, soluciones de vivienda, diseño personalizado, confort y estilo, galería de departamentos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
