--- a/pages/interiores.html
+++ b/pages/interiores.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre la sección de Diseño de Interiores de Mp Disarq, donde transformamos espacios con un enfoque personalizado y funcional. Nuestros proyectos reflejan estilo y confort, adaptándose a las necesidades de cada cliente.">
+    <meta name="keywords" content="diseño de interiores, Mp Disarq, transformación de espacios, ambientes funcionales, decoración personalizada, proyectos de interiorismo, estética y confort, innovación en diseño, estilo contemporáneo, galería de proyectos">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
