--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora los proyectos arquitectónicos de Mp Disarq en Buenos Aires, desde casas y departamentos hasta diseños de interiores. Cada proyecto refleja nuestra pasión por el diseño innovador, funcional y estético.">
+    <meta name="keywords" content="proyectos arquitectónicos, arquitectura, diseño de interiores, casas, departamentos, Mp Disarq, Buenos Aires, Pilar, Argentina">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
